Topology progress